# uwyo-cosc4780-5010-hw5-template

./: .gitignore  README.md
.devcontainer/: devcontainer.json
haskell/: CPP.cf  Main.hs  Makefile  ccpp  hie.yaml  hw4.cabal  hw5.cabal  midterm.cabal  runtime.java  test.java
haskell/test/: hie.yaml  tester.cabal  tester.hs
haskell/test/bad/: 2.cc  3.cc  4.cc.out
haskell/test/good/: 10.cc  11.cc  11.cc.out  13.cc.out  14.cc.out  15.cc  15.cc.out  16.cc  16.cc.out  2.cc  2.cc.out  3.cc  4.cc.in  6.cc  7.cc  7.cc.out  8.cc.out  9.cc.out
haskell/test/grad/good/: 18.cc  18.cc.out  19.cc  19.cc.out  20.cc.out
java/: Main.java  Makefile
java/test/: tester.hs
java/test/bad/: 1.cc
java/test/good/: 11.cc.out  12.cc.out  14.cc  2.cc  3.cc.out  5.cc.out  6.cc.out  8.cc  9.cc
java/test/grad/good/: 19.cc  19.cc.in  20.cc  20.cc.in
test/: tester.hs
test/bad/: 1.cc  10.cc  11.cc  12.cc  13.cc  14.cc  15.cc  16.cc  17.cc  18.cc  19.cc  2.cc  20.cc  3.cc  4.cc  5.cc  6.cc  7.cc  8.cc  9.cc
test/good/: 1.cc  10.cc  11.cc  12.cc  13.cc  14.cc  15.cc  16.cc  17.cc  18.cc  19.cc  2.cc  20.cc  3.cc  4.cc  5.cc  6.cc  7.cc  8.cc  9.cc
test/grad/good/: 17.cc  21.cc  21.cc.in
