cabal-version:      3.0
name:               hw4
version:            0.1.0.0
synopsis:           UWYO COSC 4780/5010 Homework 4
license:            NONE
author:             Finley McIlwaine
maintainer:         fmcilwai@uwyo.edu

executable icpp
    main-is:          Main.hs
    other-modules:
      AbsCPP
      , LexCPP
      , ParCPP
      , ErrM
      , PrintCPP
    hs-source-dirs:   ., bnfc
    build-depends:    
      base ^>=4.14.1.0
      , mtl >=2.2.0
      , array >=0.5.0.0
      , containers -any
    default-language: Haskell2010
